--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -7,6 +7,7 @@
 \newacronym{acr_ros}{ROS}{Robotics Operating System \cite{bib_ros}}
 \newacronym{acr_urdf}{URDF}{Universal Robotic Description Format \cite{bib_urdf}}
 \newacronym{acr_sot}{SOT}{Stack Of Tasks}
+\newacronym{acr_algoDFS}{DFS}{Deep First Search}
 
 %% définitions
 
@@ -47,3 +48,5 @@
 \newglossdef{gls_openMP}{Open Multi-Processing}{is an API that supports multi-platform shared memory multiprocessing programming in C, C++, and Fortran,[4] on most processor architectures and operating systems, including Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows platforms. It consists of a set of compiler directives, library routines, and environment variables that influence run-time behavior.}
 
 \newglossdef{gls_stackOfTasks}{STack Of Tasks}{Gestionnaire de l'ensemble des tâches de la plateforme robotique.}
+
+\newglossdef{gls_algoDFS}{Deep First Search}{Algorithme parcourant un arbre en profondeur d'abord.}
