--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -81,4 +81,7 @@
   J.B Lasserre,
 %  http://archive.numdam.org/ARCHIVE/RO/RO_1992__26_2/RO_1992__26_2_177_0/RO_1992__26_2_177_0.pdf
 
+\bibitem{bib_deepFirstSearch}
+%  \url{http://fr.wikipedia.org/wiki/Algorithme_de_parcours_en_profondeur}
+  
 \end{thebibliography}
